r521:    * Corrects misbuild with CVS dirs in deb. Closes: #146576

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.0.3) unstable; urgency=low
+
+  * Corrects misbuild with CVS dirs in deb. Closes: #146576
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 17 May 2002 15:38:26 -0400
+
 debhelper (4.0.2) unstable; urgency=low
 
   * dh_install: delay globbing until after destintations have been found.
