r523:    * Removing perl warning message.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.0.5) unstable; urgency=low
+
+  * Removing perl warning message.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 19 May 2002 01:04:16 -0400
+
 debhelper (4.0.4) unstable; urgency=low
 
   * Set DH_ALWAYS_EXCLUDE=CVS and debhelper will exclude CVS directories
