r524:    * Make dh_clean remove autom4te.cache.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.0.6) unstable; urgency=low
+
+  * Make dh_clean remove autom4te.cache.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 22 May 2002 14:08:33 -0400
+
 debhelper (4.0.5) unstable; urgency=low
 
   * Removing perl warning message.
