r525:    * dh_strip: If a file is an ELF shared binary, does not have a .so.* in its      name, stirp it as a ELF binary. It seems that GNUstep has files of this      sort. See bug #35733 (not sufficient to close all of it).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.0.7) unstable; urgency=low
+
+  * dh_strip: If a file is an ELF shared binary, does not have a .so.* in its
+    name, stirp it as a ELF binary. It seems that GNUstep has files of this
+    sort. See bug #35733 (not sufficient to close all of it).
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 22 May 2002 20:40:09 -0400
+
 debhelper (4.0.6) unstable; urgency=low
 
   * Make dh_clean remove autom4te.cache.
