--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.0.8) unstable; urgency=low
+
+  * Don't leak regex characters from -X when generating DH_EXCLUDE_FIND.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 22 May 2002 21:03:38 -0400
+
 debhelper (4.0.7) unstable; urgency=low
 
   * dh_strip: If a file is an ELF shared binary, does not have a .so.* in its
