r527:    * dh_install: glob relative to --sourcedir. Closes: #147908    * Documented what globbing is allowed.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -64,7 +64,7 @@ then they will be used in preference to other, more general files.
 In many cases, these config files are used to specify various types of
 files. Documentation or example files to install, files to move, and so on.
 When appropriate, in cases like these, you can use standard shell wildcard
-characters ('?' and '*') in the files.
+characters ('?' and '*' and '[..]' character classes) in the files.
 
 =head1 SHARED DEBHELPER OPTIONS
 
