--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.0.9) unstable; urgency=low
+
+  * dh_install: glob relative to --sourcedir. Closes: #147908
+  * Documented what globbing is allowed.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 23 May 2002 12:28:30 -0400
+
 debhelper (4.0.8) unstable; urgency=low
 
   * Don't leak regex characters from -X when generating DH_EXCLUDE_FIND.
