r529:    * dh_compress: always compress .pcf files in      /usr/X11R6/lib/X11/fonts/{100dpi,75dpi,misc}, as is required by policy.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.0.11) unstable; urgency=low
+
+  * dh_compress: always compress .pcf files in
+    /usr/X11R6/lib/X11/fonts/{100dpi,75dpi,misc}, as is required by policy.
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  1 Jun 2002 18:08:50 -0400
+
 debhelper (4.0.10) unstable; urgency=low
 
   * Consistently use the which command instead of command -v or hardcoded
