--- a/debhelper.pod
+++ b/debhelper.pod
@@ -286,6 +286,12 @@ scripts. (This may later be rolled back into V3).
 
 =item -
 
+You are encouraged to put the new ${misc:Depends} into debian/control to
+suppliment the ${shlibs:Depends} field. In particular, the new
+dh_installinit feature needs a versioned dependency on sysvinit.
+
+=item -
+
 dh_fixperms will make all files in bin/ directories and in etc/init.d 
 executable.
 
