--- a/doc/TODO
+++ b/doc/TODO
@@ -42,7 +42,7 @@ Wishlist items:
   without calling dh_cache again. (#23792)
 * Add a switch to dh_installdeb to allow it to do user defined
   substitutions. OTOH, maybe it's better if people just sed
-  postinst.in before debhelper gets it's hands on it... (#25235)
+  postinst.in before debhelper gets its hands on it... (#25235)
 
 Deprecated:
 
