r531:    * Fixed debconf-utils dependency.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.0.12) unstable; urgency=low
+
+  * Fixed debconf-utils dependency.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 15 Jun 2002 20:20:21 -0400
+
 debhelper (4.0.11) unstable; urgency=low
 
   * dh_compress: always compress .pcf files in
