r532:    * Added --mainpackage= option, of use in some kernel modules packages.    * dh_gencontrol only needs to pass -p to dpkg-gencontrol if there is more      than one package in debian/control. This makes it a bit more flexible in      some cases.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -113,6 +113,13 @@ the package as one that should be acted on.
 
 Use "tmpdir" for package build directory. The default is debian/<package>
 
+=item B<--mainpackage=>I<package>
+
+This little-used option changes the package which debhelper considers the
+"main package", that is, the first one listed in debian/control, and the
+one for which debian/foo files can be used instead of the usual
+debian/package.foo files.
+
 =back
 
 =head1 COMMON DEBHELPER OPTIONS
