--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.0.13) unstable; urgency=low
+
+  * Added --mainpackage= option, of use in some kernel modules packages.
+  * dh_gencontrol only needs to pass -p to dpkg-gencontrol if there is more
+    than one package in debian/control. This makes it a bit more flexible in
+    some cases.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 19 Jun 2002 19:44:12 -0400
+
 debhelper (4.0.12) unstable; urgency=low
 
   * Fixed debconf-utils dependency.
