r533:    * In script fragments, use more posix tests, no -a or -o, no parens.      Closes: #150403

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.0.14) unstable; urgency=low
+
+  * In script fragments, use more posix tests, no -a or -o, no parens.
+    Closes: #150403
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 20 Jun 2002 20:39:55 -0400
+
 debhelper (4.0.13) unstable; urgency=low
 
   * Added --mainpackage= option, of use in some kernel modules packages.
