r534:    * Stupid, evil typo.    * Fixed the tests clint didn't show me.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.0.15) unstable; urgency=low
+
+  * Stupid, evil typo.
+  * Fixed the tests clint didn't show me.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 20 Jun 2002 20:57:06 -0400
+
 debhelper (4.0.14) unstable; urgency=low
 
   * In script fragments, use more posix tests, no -a or -o, no parens.
