--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.0.16) unstable; urgency=low
+
+UNRE
+  * Pound home in dh_installman's man page that yet, it really does do the
+    right thing. Closes: #150644
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 21 Jun 2002 16:21:06 -0400
+
 debhelper (4.0.15) unstable; urgency=low
 
   * Stupid, evil typo.
