--- a/doc/TODO
+++ b/doc/TODO
@@ -43,6 +43,9 @@ Wishlist items:
 * Add a switch to dh_installdeb to allow it to do user defined
   substitutions. OTOH, maybe it's better if people just sed
   postinst.in before debhelper gets its hands on it... (#25235)
+* install-info, as of dpkg 1.10, parses the info file for section if
+  --section is not given. So I should be able to stop parsing it myself for
+  section, after dpkg 1.10 has been around long enough.
 
 Deprecated:
 
