r536:    * Patch from doogie to make dh_movefiles support -X. Closes: #150978    * Pound home in dh_installman's man page that yet, it really does do the      right thing. Closes: #150644

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
 debhelper (4.0.16) unstable; urgency=low
 
-UNRE
+  * Patch from doogie to make dh_movefiles support -X. Closes: #150978
   * Pound home in dh_installman's man page that yet, it really does do the
     right thing. Closes: #150644
 
- -- Joey Hess <joeyh@debian.org>  Fri, 21 Jun 2002 16:21:06 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu,  4 Jul 2002 22:28:53 -0400
 
 debhelper (4.0.15) unstable; urgency=low
 
