r537:    * In dh_install, don't limit to -type f when doing the find due to -X.      This makes it properly install syml8inks, cf my rpm bug.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.0.17) unstable; urgency=low
+
+  * In dh_install, don't limit to -type f when doing the find due to -X.
+    This makes it properly install syml8inks, cf my rpm bug.
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 Jul 2002 22:58:03 -0400
+
 debhelper (4.0.16) unstable; urgency=low
 
   * Patch from doogie to make dh_movefiles support -X. Closes: #150978
