r539:    * Remove /usr/doc manglement code from postinst and prerm.      Do not use this verion of debhelper for woody backports!    * Removed dh_installxaw.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.0) unstable; urgency=low
+
+  * Remove /usr/doc manglement code from postinst and prerm.
+    Do not use this verion of debhelper for woody backports!
+  * Removed dh_installxaw.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Jul 2002 15:26:10 -0400
+
 debhelper (4.0.19) unstable; urgency=low
 
   * Make dh_installchangelogs install debian/NEWS files as well, as
