r540:    * Added a -L flag to dh_shlibdeps that is a nice alternative to providing a      shlibs.local.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.1) unstable; urgency=low
+
+  * Added a -L flag to dh_shlibdeps that is a nice alternative to providing a
+    shlibs.local.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 25 Jul 2002 19:15:09 -0400
+
 debhelper (4.1.0) unstable; urgency=low
 
   * Remove /usr/doc manglement code from postinst and prerm.
