--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.2) unstable; urgency=low
+
+  * Typo, Closes: #155323
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  3 Aug 2002 12:17:11 -0400
+
 debhelper (4.1.1) unstable; urgency=low
 
   * Added a -L flag to dh_shlibdeps that is a nice alternative to providing a
