--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (4.1.3) unstable; urgency=low
+
+  * dh_installinit: Always start daemon on upgraded even if
+    --no-restart-on-upgrade is given; since the daemon is not stopped
+    with that parameter starting it again is a no-op, unless the daemon was
+    not running for some reason. This makes transtions to using the flag
+    easier. Closes: #90976 and sorry it took me so long to verify you were
+    right.
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  4 Aug 2002 18:52:12 -0400
+
 debhelper (4.1.2) unstable; urgency=low
 
   * Typo, Closes: #155323
