r543:    * Patch from Andrew Suffield to make dh_perl understand #!/usr/bin/env perl      Closes: #156243

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.4) unstable; urgency=low
+
+  * Patch from Andrew Suffield to make dh_perl understand #!/usr/bin/env perl
+    Closes: #156243
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Aug 2002 23:05:45 -0400
+
 debhelper (4.1.3) unstable; urgency=low
 
   * dh_installinit: Always start daemon on upgraded even if
