r545:    * Clarified dh_perl man page. Closes: #159332

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (4.1.6) unstable; urgency=low
+
+  * Clarified dh_perl man page. Closes: #159332
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  3 Sep 2002 12:27:08 -0400
+
+debhelper (4.1.5) unstable; urgency=low
+
+  * Fixed excessive escaping around terms in DH_EXCLUDE_FIND. Closes: #159155
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  1 Sep 2002 19:20:32 -0400
+
 debhelper (4.1.4) unstable; urgency=low
 
   * Patch from Andrew Suffield to make dh_perl understand #!/usr/bin/env perl
