r546:    * dh_builddeb(1): It's --filename, not --name. Closes: #160151

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.7) unstable; urgency=low
+
+  * dh_builddeb(1): It's --filename, not --name. Closes: #160151
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  8 Sep 2002 20:05:07 -0400
+
 debhelper (4.1.6) unstable; urgency=low
 
   * Clarified dh_perl man page. Closes: #159332
