r547:    * Use invoke-rc.d always now that it is in policy. Fall back to old behavior      if invoke-rc.d is not present, so versioned deps on sysvinit are not      needed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.8) unstable; urgency=low
+
+  * Use invoke-rc.d always now that it is in policy. Fall back to old behavior
+    if invoke-rc.d is not present, so versioned deps on sysvinit are not
+    needed.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Sep 2002 20:07:41 -0400
+
 debhelper (4.1.7) unstable; urgency=low
 
   * dh_builddeb(1): It's --filename, not --name. Closes: #160151
