r549:    * Fixed over-escaping of period when generating EXCLUDE_FIND.      Closes: #159155

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.9) unstable; urgency=low
+
+  * Fixed over-escaping of period when generating EXCLUDE_FIND.
+    Closes: #159155
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Sep 2002 13:41:05 -0400
+
 debhelper (4.1.8) unstable; urgency=low
 
   * Use invoke-rc.d always now that it is in policy. Fall back to old behavior
