r550:    * Depend on coreutils | fileutils. Closes: #161452

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.10) unstable; urgency=low
+
+  * Depend on coreutils | fileutils. Closes: #161452
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 19 Sep 2002 11:21:19 -0400
+
 debhelper (4.1.9) unstable; urgency=low
 
   * Fixed over-escaping of period when generating EXCLUDE_FIND.
