r551:    * Make addsubstvars remove old instances of line before adding new. This      will make dh_perl get deps right for packages that have perl modules and      XS in them.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.11) unstable; urgency=low
+
+  * Make addsubstvars remove old instances of line before adding new. This
+    will make dh_perl get deps right for packages that have perl modules and
+    XS in them.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 22 Sep 2002 11:27:08 -0400
+
 debhelper (4.1.10) unstable; urgency=low
 
   * Depend on coreutils | fileutils. Closes: #161452
