--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+debhelper (4.1.12) unstable; urgency=low
+
+  * The "reverse hangover" release.
+  * dh_strip: better documentation, removed extraneous "item" from SYNOPSIS.
+    Closes: #162493
+  * dh_strip: detect and don't strip debug/*.so files.
+  * Note that 4.1.11 changelog entry was incorrect, dh_perl worked fine
+    without that change, but the new behavior is less likely to break things
+    if dpkg-gencontrol changes.
+  * Various improvements to debhelper(1).
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Sep 2002 19:37:19 -0400
+
 debhelper (4.1.11) unstable; urgency=low
 
   * Make addsubstvars remove old instances of line before adding new. This
