r553:    * dh_installdebconf: Support po-debconf debian/po directories.      Closes: #163128

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.13) unstable; urgency=low
+
+  * dh_installdebconf: Support po-debconf debian/po directories.
+    Closes: #163128
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  2 Oct 2002 23:41:51 -0400
+
 debhelper (4.1.12) unstable; urgency=low
 
   * The "reverse hangover" release.
