--- a/doc/TODO
+++ b/doc/TODO
@@ -47,3 +47,5 @@ Deprecated:
   catches on, make it emit a warning, and then wait for it to go away.
 * dh_testversion. Remove as soon as nothing uses it.
 * dh_movefiles. I won't hold my breath.
+* debconf-mergetemplates support and the debian/template.ll files and the
+  debconf-utils dependency.
