r554:    * dh_fixperms: Make sure .pm files are 0644. Closes: #163418

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.14) unstable; urgency=low
+
+  * dh_fixperms: Make sure .pm files are 0644. Closes: #163418
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  5 Oct 2002 14:03:52 -0400
+
 debhelper (4.1.13) unstable; urgency=low
 
   * dh_installdebconf: Support po-debconf debian/po directories.
