--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.15) unstable; urgency=low
+
+  * dh_compress: Exclude .css files, to prevent broken links from html files,
+    and since they are generally small, and since this matches existing
+    practice. Closes: #163303
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  5 Oct 2002 15:04:44 -0400
+
 debhelper (4.1.14) unstable; urgency=low
 
   * dh_fixperms: Make sure .pm files are 0644. Closes: #163418
