r556:    * Depend on po-debconf, and I hope I can drop the debconf-utils dep soon.      Closes: #163569    * Removed debconf-utils build-dep. Have no idea why that was there.    * dh_installman: Don't use extended section as section name for translated      man pages, use only the numeric section as is done for regular man pages.      Closes: #163534

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (4.1.16) unstable; urgency=low
+
+  * Depend on po-debconf, and I hope I can drop the debconf-utils dep soon.
+    Closes: #163569
+  * Removed debconf-utils build-dep. Have no idea why that was there.
+  * dh_installman: Don't use extended section as section name for translated
+    man pages, use only the numeric section as is done for regular man pages.
+    Closes: #163534
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  7 Oct 2002 11:49:37 -0400
+
 debhelper (4.1.15) unstable; urgency=low
 
   * dh_compress: Exclude .css files, to prevent broken links from html files,
