r557:    * dh_installinit: added --no-start for rcS type scripts. Closes: #136502

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.17) unstable; urgency=low
+
+  * dh_installinit: added --no-start for rcS type scripts. Closes: #136502
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 11 Oct 2002 13:58:22 -0400
+
 debhelper (4.1.16) unstable; urgency=low
 
   * Depend on po-debconf, and I hope I can drop the debconf-utils dep soon.
