r558:    * Use dpkg-architecture instead of dpkg --print-architecture (again?)      See #164863    * typo fix Closes: #164958 The rest seems clear enough from context, so      omitted.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.1.18) unstable; urgency=low
+
+  * Use dpkg-architecture instead of dpkg --print-architecture (again?)
+    See #164863
+  * typo fix Closes: #164958 The rest seems clear enough from context, so
+    omitted.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 16 Oct 2002 20:47:43 -0400
+
 debhelper (4.1.17) unstable; urgency=low
 
   * dh_installinit: added --no-start for rcS type scripts. Closes: #136502
