r559:    * Added note to dh_installdebconf(1) about postinst sourcing debconf      confmodule. (Cf #106070)    * Added an example to dh_install(1). Closes: #166402

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.19) unstable; urgency=low
+
+  * Added note to dh_installdebconf(1) about postinst sourcing debconf
+    confmodule. (Cf #106070)
+  * Added an example to dh_install(1). Closes: #166402
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 27 Oct 2002 20:26:02 -0500
+
 debhelper (4.1.18) unstable; urgency=low
 
   * Use dpkg-architecture instead of dpkg --print-architecture (again?)
