r560:    * typo in dh_shlibdeps(1), Closes: #167421    * dh_movefiles: make --list-missing respect --sourcedir. Closes: #168441

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.20) unstable; urgency=low
+
+  * typo in dh_shlibdeps(1), Closes: #167421
+  * dh_movefiles: make --list-missing respect --sourcedir. Closes: #168441
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 10 Nov 2002 19:09:00 -0500
+
 debhelper (4.1.19) unstable; urgency=low
 
   * Added note to dh_installdebconf(1) about postinst sourcing debconf
