r563:    * dh_install: Support autodest with non-debian/tmp sourcedirs.      Closes: #169138    * dh_install: Support implicit "." sourcedir and --list-missing.      (Also supports ./foo file specs and --list-missing.)      Closes: #168751    * dh_md5sums: Don't glob. Closes: #169135

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (4.1.22) unstable; urgency=low
+
+  * dh_install: Support autodest with non-debian/tmp sourcedirs.
+    Closes: #169138
+  * dh_install: Support implicit "." sourcedir and --list-missing.
+    (Also supports ./foo file specs and --list-missing.)
+    Closes: #168751
+  * dh_md5sums: Don't glob. Closes: #169135
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 15 Nov 2002 13:12:24 -0500
+
 debhelper (4.1.21) unstable; urgency=low
 
   * Make dh_install --list-missing honor -X excludes. Closes: #168739
