r564:    * Still run potodebconf after warning about templates.ll files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.23) unstable; urgency=low
+
+  * Still run potodebconf after warning about templates.ll files.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 15 Nov 2002 15:33:31 -0500
+
 debhelper (4.1.22) unstable; urgency=low
 
   * dh_install: Support autodest with non-debian/tmp sourcedirs.
