r565:    * Various minor changes based on suggestions by luca.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.24) unstable; urgency=low
+
+  * Various minor changes based on suggestions by luca.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Nov 2002 00:13:52 -0500
+
 debhelper (4.1.23) unstable; urgency=low
 
   * Still run potodebconf after warning about templates.ll files.
