r566:    * Added a dh_python command, by Josselin Mouette      <josselin.mouette@ens-lyon.org>.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.25) unstable; urgency=low
+
+  * Added a dh_python command, by Josselin Mouette 
+    <josselin.mouette@ens-lyon.org>.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Nov 2002 00:55:35 -0500
+
 debhelper (4.1.24) unstable; urgency=low
 
   * Various minor changes based on suggestions by luca.
