r567:    * dh_builddeb: Reluctantly call dpkg-deb directly. dpkg cannot pass extra      params to dpkg-deb. Closes: #170330

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.26) unstable; urgency=low
+
+  * dh_builddeb: Reluctantly call dpkg-deb directly. dpkg cannot pass extra
+    params to dpkg-deb. Closes: #170330
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 24 Nov 2002 11:14:36 -0500
+
 debhelper (4.1.25) unstable; urgency=low
 
   * Added a dh_python command, by Josselin Mouette 
