--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.27) unstable; urgency=low
+
+  * Fixed dh_python ordering in example rules files. Closes: #172283
+  * Make python postinst fragment only run python if it is installed, useful
+    for packages that include python modules but do not depend on python.
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  9 Dec 2002 12:12:31 -0500
+
 debhelper (4.1.26) unstable; urgency=low
 
   * dh_builddeb: Reluctantly call dpkg-deb directly. dpkg cannot pass extra
