--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
+debhelper (4.1.28) unstable; urgency=low
+
+  * Fix dh_install to install empty directories even if it is excluding some
+    files from installation.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 12 Dec 2002 14:39:30 -0500
+
 debhelper (4.1.27) unstable; urgency=low
 
   * Fixed dh_python ordering in example rules files. Closes: #172283
   * Make python postinst fragment only run python if it is installed, useful
     for packages that include python modules but do not depend on python.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  9 Dec 2002 12:12:31 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon,  9 Dec 2002 21:53:08 -0500
 
 debhelper (4.1.26) unstable; urgency=low
 
