r571:    * Turned dh_undocumented into a no-op, as policy does not want      undocumented.7 links anymore.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.30) unstable; urgency=low
+
+  * Turned dh_undocumented into a no-op, as policy does not want
+    undocumented.7 links anymore.
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  3 Feb 2003 16:34:13 -0500
+
 debhelper (4.1.29) unstable; urgency=low
 
   * List binary-common in .PHONY in rules.multi2. Closes: #173278
