--- a/doc/TODO
+++ b/doc/TODO
@@ -49,3 +49,4 @@ Deprecated:
 * dh_movefiles. I won't hold my breath.
 * debconf-mergetemplates support and the debian/template.ll files and the
   debconf-utils dependency.
+* dh_undocumented
