r572:    * Added dh_installcatalogs, for sgml (and later xml) catalogs. By      Adam DiCarlo. Closes: #90025

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.31) unstable; urgency=low
+
+  * Added dh_installcatalogs, for sgml (and later xml) catalogs. By
+    Adam DiCarlo. Closes: #90025
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 12 Feb 2003 11:26:24 -0500
+
 debhelper (4.1.30) unstable; urgency=low
 
   * Turned dh_undocumented into a no-op, as policy does not want
