r573:    * dh_md5sums: note that it's used by debsums. Closes: #181521    * Make addsubstvars() escape the value of the variable before passing it to      the shell. Closes: #178524    * Fixed escape_shell()'s escaping of a few things.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.1.32) unstable; urgency=low
+
+  * dh_md5sums: note that it's used by debsums. Closes: #181521
+  * Make addsubstvars() escape the value of the variable before passing it to
+    the shell. Closes: #178524
+  * Fixed escape_shell()'s escaping of a few things.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 18 Feb 2003 19:01:45 -0500
+
 debhelper (4.1.31) unstable; urgency=low
 
   * Added dh_installcatalogs, for sgml (and later xml) catalogs. By
