r575:    * Removed vegistal substvars stuff from dh_inistallinit.    * Update debhelper(1).

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -293,8 +293,7 @@ the generated dependancy line in the shlibs file.
 =item -
 
 You are encouraged to put the new ${misc:Depends} into debian/control to
-suppliment the ${shlibs:Depends} field. In particular, the new
-dh_installinit feature needs a versioned dependency on sysvinit.
+suppliment the ${shlibs:Depends} field.
 
 =item -
 
