--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.34) unstable; urgency=low
+
+  * Removed vegistal substvars stuff from dh_inistallinit.
+  * Update debhelper(1).
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 24 Feb 2003 19:34:44 -0500
+
 debhelper (4.1.33) unstable; urgency=low
 
   * wiggy didn't take my hint about making update-modules send warnings to
