--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.35) unstable; urgency=low
+
+  * Rename debhelper.1 to debhelper.7.
+  * Typo, Closes: #183267
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  3 Mar 2003 16:23:32 -0500
+
 debhelper (4.1.34) unstable; urgency=low
 
   * Removed vegistal substvars stuff from dh_inistallinit.
