r578:    * dh_installmenu: Refer to menufile(5) instead of 5L so as not to confuse      pod2man. Closes: #184013

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.37) unstable; urgency=low
+
+  * dh_installmenu: Refer to menufile(5) instead of 5L so as not to confuse
+    pod2man. Closes: #184013
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  8 Mar 2003 18:37:14 -0500
+
 debhelper (4.1.36) unstable; urgency=low
 
   * Rename debhelper.1 to debhelper.7.
