--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.38) unstable; urgency=low
+
+UNRE
+  * Fixed dh_installcatalog's references to itself on man page.
+    Closes: #184411
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 13 Mar 2003 10:51:54 -0500
+
 debhelper (4.1.37) unstable; urgency=low
 
   * dh_installmenu: Refer to menufile(5) instead of 5L so as not to confuse
