r581:    * Add calls to dh_installcatalogs to example rules files. Closes: #186819

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.39) unstable; urgency=low
+
+  * Add calls to dh_installcatalogs to example rules files. Closes: #186819
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 31 Mar 2003 11:52:03 -0500
+
 debhelper (4.1.38) unstable; urgency=low
 
   * Fixed dh_installcatalog's references to itself on man page.
