r582:    * Fix build with 077 umask. Closes: #187757    * Allow colons between multiple items in DH_ALWAYS_EXCLUDE.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -376,6 +376,9 @@ tarball that (unwisely) includes CVS directories, you might want to export
 DH_ALWAYS_EXCLUDE=CVS in debian/rules, to make it take effect wherever
 your package is built.
 
+Multiple things to exclude can be separated with colons, as in
+DH_ALWAYS_EXCLUDE=CVS:.svn
+
 =back
 
 =head1 SEE ALSO
