--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.40) unstable; urgency=low
+
+  * Fix build with 077 umask. Closes: #187757
+  * Allow colons between multiple items in DH_ALWAYS_EXCLUDE.
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  6 Apr 2003 14:30:48 -0400
+
 debhelper (4.1.39) unstable; urgency=low
 
   * Add calls to dh_installcatalogs to example rules files. Closes: #186819
