r583:    * dh_movefiles: Do not pass --remove-files to tar, since that makes      it break hard links (see #188663).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.41) unstable; urgency=low
+
+  * dh_movefiles: Do not pass --remove-files to tar, since that makes
+    it break hard links (see #188663).
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 12 Apr 2003 17:11:28 -0400
+
 debhelper (4.1.40) unstable; urgency=low
 
   * Fix build with 077 umask. Closes: #187757
