r584:    * Fix stupid typo in dh_movefiles. Closes: #188833

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.42) unstable; urgency=medium
+
+  * Fix stupid typo in dh_movefiles. Closes: #188833
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 13 Apr 2003 11:44:22 -0400
+
 debhelper (4.1.41) unstable; urgency=low
 
   * dh_movefiles: Do not pass --remove-files to tar, since that makes
