r585:    * dh_python: Honour -n flag. Closes: #192804

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.43) unstable; urgency=low
+
+  * dh_python: Honour -n flag. Closes: #192804
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 10 May 2003 13:00:12 -0400
+
 debhelper (4.1.42) unstable; urgency=medium
 
   * Fix stupid typo in dh_movefiles. Closes: #188833
