--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.44) unstable; urgency=low
+
+  * dh_python: allow for a + at the end of the python version, as in the
+    python in stable, version 2.1.3+.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 20 May 2003 17:50:16 -0400
+
 debhelper (4.1.43) unstable; urgency=low
 
   * dh_python: Honour -n flag. Closes: #192804
