--- a/doc/TODO
+++ b/doc/TODO
@@ -5,7 +5,7 @@ Wishlist items:
 
 * All debhelper programs should only accept the options they are documented
   to accept (rather than accepting all debhelper options). They should
-  be able to print breif usage summaries.
+  be able to print brief usage summaries.
 
   I think this calls for a restucturing. Make a Debhelper.pm class. Each
   program subclasses the class. The class provides command line parsing,
@@ -40,7 +40,7 @@ Deprecated:
   higher. I won't hold my breath.
 * Also, grep the entire archive for all dh_* command lines (I do this now),
   and check to see what other switches are not being used, and maybe remove
-  some of them. I'd also like to depercate/remove debian/compress files, -X is
+  some of them. I'd also like to deprecate/remove debian/compress files, -X is
   a better idea.
 * dh_suidregister. Once nothing in the archive uses it.
 * dh_installmanpages. Only mildly deprecated right now. Once dh_installman
