--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.45) unstable; urgency=low
+
+UNRE
+  * Typo fixes from Adam Garside.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 22 May 2003 21:28:17 -0400
+
 debhelper (4.1.44) unstable; urgency=low
 
   * dh_python: allow for a + at the end of the python version, as in the
