r588:    * Typo fixes from Adam Garside.    * dh_python: don't bother terminating the regexp, 2.2.3c1 for example.      Closes: #194531

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
 debhelper (4.1.45) unstable; urgency=low
 
-UNRE
   * Typo fixes from Adam Garside.
+  * dh_python: don't bother terminating the regexp, 2.2.3c1 for example.
+    Closes: #194531
 
- -- Joey Hess <joeyh@debian.org>  Thu, 22 May 2003 21:28:17 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 24 May 2003 11:55:32 -0400
 
 debhelper (4.1.44) unstable; urgency=low
 
