--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (4.1.46) unstable; urgency=low
+
+  * Added dh_scrollkeeper, by Ross Burton.
+  * Added dh_userlocal, by Andrew Stribblehill. (With root.root special case
+    added by me.)
+  * Added dh_installlogcheck, by Jon Middleton. Closes: #184021
+  * Add aph's name to copyright file too.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 12 Jun 2003 10:01:28 -0400
+
 debhelper (4.1.45) unstable; urgency=low
 
   * Typo fixes from Adam Garside.
